<resources>
    <string name="app_name">Capital Social Test</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">178152739359183</string>
    <string name="title_activity_maps">Map</string>
    <string name="ingresar">Ingresar</string>
    <string name="haz_olvidado_tu_contrase_a"><u>¿Haz olvidado tu contraseña?</u></string>
    <string name="reg_strate">Regístrate</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="titulo">titulo</string>
    <string name="descripcion">descripcion</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="email">email</string>
    <string name="whats">WhatsApp</string>
    <string name="face">Facebook</string>
    <string name="tweet">Twitter</string>
</resources>
